# XenWindow

./: .clang-format  .gitmodules  CMakeLists.txt  README.md
.cache/clangd/index/: Window.cpp.D1CF2D5AA55340A8.idx  XenWindow.cpp.715D7BA1DDA6D031.idx  XenWindow.h.DBC6A5337B3DF0C3.idx
CMake/: DetectWindowingSystem.cmake
Examples/: CMakeLists.txt  Window.cpp
Include/XenWindow/: NativeWindow.h  WaylandWindow.h  X11Window.h  XenWindow.h
Source/: Panic.inl  WaylandWindow.cpp  X11Window.cpp  XenWindow.cpp
